--- a/SLBr/Pages/HistoryPage.xaml
+++ b/SLBr/Pages/HistoryPage.xaml
@@ -53,7 +53,7 @@
                 <ScrollViewer controls:SmoothScrollBehavior.Enable="True" VerticalScrollBarVisibility="Auto" Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=WinUI:WinUITabControl}}">
                     <StackPanel Margin="25" MaxWidth="800">
                         <DockPanel Margin="0,0,0,25" VerticalAlignment="Center" Width="Auto" HorizontalAlignment="Stretch" Height="35">
-                            <Button Visibility="Collapsed" Foreground="Red" DockPanel.Dock="Right" Click="DeleteSelectedButton_Click" x:Name="DeleteSelectedButton" ToolTip="Delete selected" Content="&#xe74d;" Margin="0,0,5,0" Style="{StaticResource IconButton}"/>
+                            <Button Visibility="Collapsed" Foreground="Red" DockPanel.Dock="Right" Click="DeleteSelectedButton_Click" x:Name="DeleteSelectedButton" ToolTip="Delete selected" Content="&#xe74d;" Margin="0,0,0,0" Style="{StaticResource IconButton}"/>
                             <TextBlock TextAlignment="Left" VerticalAlignment="Center" HorizontalAlignment="Left" Width="Auto" FontWeight="DemiBold" FontSize="25">Today</TextBlock>
                         </DockPanel>
                         <ListBox KeyDown="HistoryList_KeyDown" SelectionChanged="HistoryList_SelectionChanged" SelectionMode="Extended" VirtualizingPanel.VirtualizationMode="Recycling" x:Name="HistoryList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
@@ -70,13 +70,11 @@
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                                <Border Margin="1.25,2.5">
-                                                    <Grid>
-                                                        <Border Name="ItemBorder" CornerRadius="5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}"/>
-                                                        <ContentPresenter x:Name="Content" Margin="0"/>
-                                                        <Border Opacity="0" x:Name="Border" BorderThickness="2" BorderBrush="{StaticResource IndicatorBrush}" CornerRadius="5"/>
-                                                    </Grid>
-                                                </Border>
+                                                <Grid Margin="0,2.5">
+                                                    <Border Name="ItemBorder" CornerRadius="5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}"/>
+                                                    <ContentPresenter x:Name="Content" Margin="0"/>
+                                                    <Border Opacity="0" x:Name="Border" BorderThickness="2" BorderBrush="{StaticResource IndicatorBrush}" CornerRadius="5"/>
+                                                </Grid>
                                                 <ControlTemplate.Triggers>
                                                     <Trigger Property="IsSelected" Value="True">
                                                         <Setter Property="BorderThickness" Value="0"/>
