Re-implemented infobars.

--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -503,7 +503,7 @@
                         </Grid>
                     </Grid>
                 </DockPanel>
-                <Border BorderBrush="{StaticResource BorderBrush}" BorderThickness="0,0,0,1" x:Name="FavouriteContainer" Margin="0" Padding="0" MinHeight="5" Height="41.25" Grid.Row="1" HorizontalAlignment="Stretch">
+                <Border BorderThickness="0" x:Name="FavouriteContainer" Margin="0" Padding="0" MinHeight="5" Height="41.25" Grid.Row="1" HorizontalAlignment="Stretch">
                     <ScrollViewer controls:SmoothScrollBehavior.Enable="True" FontFamily="None" x:Name="FavouriteScrollViewer" Margin="5,0,5,5" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden">
                         <ItemsControl x:Name="FavouritesPanel" HorizontalAlignment="Stretch" ItemsSource="{Binding Favourites}">
                             <ItemsControl.Resources>
@@ -572,6 +572,37 @@
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
                     </ScrollViewer>
+                </Border>
+                <Border BorderBrush="{StaticResource BorderBrush}" BorderThickness="0,0,0,1" Margin="0" Grid.Row="2" HorizontalAlignment="Stretch" Padding="5,0">
+                    <StackPanel>
+                        <ItemsControl VirtualizingPanel.VirtualizationMode="Recycling" x:Name="InfoBarList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Height="40" Margin="0,0,0,5" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5" Background="{StaticResource SecondaryBrush}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <DockPanel Margin="10,5">
+                                                <TextBlock Visibility="{Binding Icon, Converter={StaticResource NullToVisibility}}" Foreground="{Binding IconForeground, TargetNullValue={StaticResource FontBrush}}" VerticalAlignment="Center" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,10,0" Text="{Binding Icon}"/>
+                                                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" TextTrimming="CharacterEllipsis" FontWeight="Medium" Text="{Binding Title}"/>
+                                                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" TextTrimming="CharacterEllipsis" Text="{Binding Description}" Foreground="{StaticResource GrayBrush}"/>
+                                            </DockPanel>
+                                            <Button Padding="5,0" Width="Auto" BorderThickness="{Binding ActionBackground, TargetNullValue={StaticResource BorderBrush}}" Foreground="{Binding ActionForeground, TargetNullValue={StaticResource FontBrush}}" Background="{Binding ActionBackground, TargetNullValue={StaticResource PrimaryBrush}}" Visibility="{Binding ActionText, Converter={StaticResource NullToVisibility}}" Content="{Binding ActionText}" Command="{Binding ActionCommand}" Grid.Column="1" DockPanel.Dock="Right" Margin="0,0,10,0" Height="30"/>
+                                            <Button Visibility="{Binding IsClosable, Converter={StaticResource BooleanToVisibility}}" Click="CloseInfoBarButton_Click" Grid.Column="2" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,2.5,0" Background="Transparent" Style="{StaticResource IconButton}" Height="30" Width="30" ToolTip="Close" Content="&#xe711;"/>
+                                        </Grid>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
                 </Border>
             </Grid>
         </Border>
