--- a/SLBr/Pages/SettingsPage.xaml
+++ b/SLBr/Pages/SettingsPage.xaml
@@ -88,7 +88,7 @@
                                     <StackPanel>
                                         <DockPanel>
                                             <TextBlock Foreground="White" FontSize="18" FontWeight="UltraLight" FontFamily="{StaticResource IconFontFamily}" VerticalAlignment="Center" Text="&#xec9c;" Margin="0,0,5,0"/>
-                                            <TextBlock Foreground="White" VerticalAlignment="Center" Text="Data is not synchorized."/>
+                                            <TextBlock x:Name="SyncWarningText" Foreground="White" VerticalAlignment="Center" Text="Data is not synchorized."/>
                                         </DockPanel>
                                     </StackPanel>
                                 </GroupBox>
