--- a/SLBr/Pages/SettingsPage.xaml
+++ b/SLBr/Pages/SettingsPage.xaml
@@ -689,6 +689,14 @@
                         <GroupBox Margin="0,0,0,10">
                             <StackPanel>
                                 <CheckBox Margin="0,0,0,10" x:Name="SpellCheckCheckBox" Width="Auto" Click="SpellCheckCheckBox_Click" Content="Check for spelling errors"/>
+                                <DockPanel Margin="0,0,0,10">
+                                    <TextBlock VerticalAlignment="Center" Text="Spellcheck provider"/>
+                                    <ComboBox IsEnabled="{Binding ElementName=SpellCheckCheckBox, Path=IsChecked, TargetNullValue=False}" x:Name="SpellcheckProviderComboBox" Width="200px" VerticalAlignment="Center" SelectedIndex="0" DockPanel.Dock="Right" HorizontalAlignment="Right" SelectionChanged="SpellcheckProviderComboBox_SelectionChanged">
+                                        <ComboBoxItem>System</ComboBoxItem>
+                                        <!--<ComboBoxItem>Google</ComboBoxItem>-->
+                                        <ComboBoxItem>LanguageTool</ComboBoxItem>
+                                    </ComboBox>
+                                </DockPanel>
                                 <DockPanel>
                                     <TextBlock VerticalAlignment="Center" Text="Translation provider"/>
                                     <ComboBox x:Name="TranslationProviderComboBox" Width="200px" VerticalAlignment="Center" SelectedIndex="0" DockPanel.Dock="Right" HorizontalAlignment="Right" SelectionChanged="TranslationProviderComboBox_SelectionChanged">
